package com.baeldung;

/*
PROJECT NAME : design-patterns-java
Module NAME: IntelliJ IDEA
Author Name : @ DRRONIDZ
DATE : 8/3/2021 1:14 AM
*/

public interface Movable {
    // returns Speed in MPH
    double getSpeed();
}
